1. BridgeWebClient supports setting a customed WebViewClient to do extra filtering or something
2. in BridgeWebClient #onPageFinished(), copy startmessages and set it to null to prevent furthermore message being stored in startmessages

--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -4,13 +4,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <!-- button 演示Java调用web -->
-    <Button 
-        android:id="@+id/button"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:text="@string/button_name"
-        android:layout_height="48dp"
-        />
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:text="@string/button_name"
+            android:layout_height="48dp"
+            />
+
+        <Button
+            android:id="@+id/loadjs"
+            android:layout_width="wrap_content"
+            android:text="loadJs"
+            android:layout_height="48dp"
+            />
+
+    </LinearLayout>
+
     
     <!-- webview 演示web调用Java -->
     <com.github.lzyzsd.jsbridge.BridgeWebView
