--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -4,27 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <!-- button 演示Java调用web -->
+    <Button 
+        android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:text="@string/button_name"
-            android:layout_height="48dp"
-            />
-
-        <Button
-            android:id="@+id/loadjs"
-            android:layout_width="wrap_content"
-            android:text="loadJs"
-            android:layout_height="48dp"
-            />
-
-    </LinearLayout>
-
+        android:text="@string/button_name"
+        android:layout_height="48dp"
+        />
     
     <!-- webview 演示web调用Java -->
     <com.github.lzyzsd.jsbridge.BridgeWebView
